--- a/app/src/main/res/layout/list_doctors_item.xml
+++ b/app/src/main/res/layout/list_doctors_item.xml
@@ -1,13 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent">
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="horizontal"
+    tools:background="@drawable/background"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
 
-    <TextView
-        android:id="@+id/name"
-        android:textSize="24sp"
-        android:textColor="#ffffff"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="0dp"
+        android:layout_weight="1"
+        android:layout_height="wrap_content">
+        <TextView
+            android:id="@+id/name"
+            android:textSize="24sp"
+            android:textColor="#ffffff"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            tools:text="William Hartnell"/>
+
+        <TextView
+            android:id="@+id/alias"
+            android:textSize="16sp"
+            android:textColor="#ffffff"
+            android:alpha="0.4"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            tools:text="1st Doctor"/>
+    </LinearLayout>
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_hearts"/>
 </LinearLayout>
