--- a/app/src/main/res/layout/list_doctors_item.xml
+++ b/app/src/main/res/layout/list_doctors_item.xml
@@ -28,6 +28,13 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             tools:text="1st Doctor"/>
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/list_actors"
+            tools:listitem="@layout/list_actors_item"
+            android:scrollbars="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
     </LinearLayout>
 
     <ImageView
